--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=\, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world</h1>
+    <h2>Here is <a href="gallery.html">gallery</a></h2>
+  </body>
 </html>
