--- a/gallery.html
+++ b/gallery.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world</h1>
+    <h2>Here is <a href="index.html">landing</a></h2>
+    <img src="img/1083755.jpg" width="300px">
+    <img src="img/738244.jpg" width="300px">
+  </body>
 </html>
